cmake_minimum_required(VERSION 3.9)
project(Progra.1.datos.2)

set(CMAKE_CXX_STANDARD 11)
add_executable(Progra.1.datos.2 main.cpp Client_Server/Client_Server.cpp Client_Server/Client_Server.h)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_PREFIX_PATH "/opt/qt/5.6/gcc_64/")
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5PrintSupport REQUIRED)
find_package(Qt5Xml REQUIRED)
set(SOURCE_FILES main.cpp)
target_link_libraries(Progra.1.datos.2 json-c)
target_link_libraries(Progra.1.datos.2 Qt5::Widgets Qt5::Core Qt5::Network Qt5::Sql
        ${Boost_LIBRARIES})