cmake_minimum_required(VERSION 3.9)
project(Progra.1.datos.2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_PREFIX_PATH "/opt/qt/5.6/gcc_64/")
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
find_package(Qt5Core REQUIRED)
find_package(Qt5Widgets REQUIRED)
find_package(Qt5Gui REQUIRED)
find_package(Qt5Network REQUIRED)
find_package(Qt5Sql REQUIRED)
find_package(Qt5PrintSupport REQUIRED)
find_package(Qt5Xml REQUIRED)
set(SOURCE_FILES main.cpp Client_Server/Client_Server.cpp Client_Server/Client_Server.h GUI/Interfaz.cpp GUI/CodeEditor.cpp GUI/CodeEditor.h GUI/Interfaz.h GUI/RAM.cpp GUI/RAM.h Parsing/P_parsing.cpp Parsing/P_parsing.h Parsing/Json_creator.cpp Parsing/Json_creator.h Parsing/Syntax_analysis.cpp Parsing/Syntax_analysis.h Parsing/Operational_parsing.cpp Parsing/Operational_parsing.h)
add_executable(Progra.1.datos.2 ${SOURCE_FILES} main.cpp "Client_Server/Client_Server.cpp" "Client_Server/Client_Server.h" "GUI/Interfaz.cpp" "GUI/Interfaz.h" "GUI/CodeEditor.cpp" "GUI/CodeEditor.h")
target_link_libraries(Progra.1.datos.2 json-c)
target_link_libraries(Progra.1.datos.2 Qt5::Widgets Qt5::Core Qt5::Network Qt5::Sql
        ${Boost_LIBRARIES})
